--- a/lab4/report.Rmd
+++ b/lab4/report.Rmd
@@ -50,7 +50,7 @@ tmp5=ar1_process(t,mu,1,sigmasq)
 plot(x=seq(1,t),y=tmp5,type="l",xlab = "Time",ylab="Value",main = "phi=1")
 ```
 
-As $\phi$ increases, the value between two continuous observations become less irregular.
+As the absolute value of $\phi$ decreases, the simulated result shows more random result.
 
 (b) Use your function from a) to simulate two AR(1)-processes, $x_{1:T}$ with $\phi=0.3$ and $y_{1:T}$ with $\phi=0.95$. Now, treat your simulated vectors as synthetic data, and treat the values of $\mu$, $\phi$ and $\sigma^2$ as unknown and estimate them using MCMC. Implement Stan-code that samples from the posterior of the three parameters, using suitable non-informative priors of your choice. [Hint: Look at the time-series models examples in the Stan user’s guide/reference manual, and note the different parameterization used here.]
 
@@ -142,54 +142,13 @@ pairs(extract(fit1, c('mu','phi')))
 pairs(extract(fit2, c('mu','phi')))
 ```
 
-The joint posterior of $\mu$ and $\phi$ are concentrated around parameters' mean. The joint posterior distribution seems normally distributed, since we know the data is simulated using normal distribution, it is possible to conclude that the model constructed for sampling described the data well.
+ The posterior using the data which $\phi = 0.3$ shows converging simulated parameters. The joint posterior of $\mu1$ and $\phi1$ are concentrated around parameters' mean. The joint posterior distribution seems normally distributed. Since we know the data is simulated using normal distribution, it is possible to conclude that the model constructed for sampling described the data well.
+ 
+ However, the posterior using the data which $\phi = 0.95$ showed different result to the one using data with $\phi = 0.3$. Sampled $\mu2$ and $\phi2$ tend to show trends, rather than converging to certain values. This is because the randomness involved in the data for deriving posterior is significantly less than the one with $\phi = 0.3$.
 
 (c) The data campy.dat contain the number of cases of campylobacter infections in the north of the province Quebec (Canada) in four week intervals from January 1990 to the end of October 2000. It has 13 observations per year and 140 observations in total. Assume that the number of infections $c_t$ at each time point follows an independent Poisson distribution when conditioned on a latent AR(1)-process $x_t$, that is 
 $$c_t|x_t \sim Poisson(exp(x_t))$$
 where $x_t$ is an AR(1)-process as in a). Implement and estimate the model in Stan, using suitable priors of your choice. Produce a plot that contains both the data and the posterior mean and 95% credible intervals for the latent intensity $\theta_t=exp(x_t)$ over time. [Hint: Should $x_t$ be seen as data or parameters?]
-
-```{r,q1=TRUE,echo=FALSE,message=FALSE, fig.align='center'}
-data=read.table("campy.dat",header = TRUE)
-data = list(N=length(data$c), ct=data$c)
-StanModel ='
-data {
-  int<lower=0> N;
-  int ct[N];
-}
-parameters {
-  real mu;
-  real <lower=-1,upper=1>phi;
-  real<lower=0> sigma;
-  real xt[N];
-}
-model {
-  mu~ normal(1,100);
-  phi~ normal(1,100);
-  sigma ~ scaled_inv_chi_square(20,2);
-  xt[1]~normal(mu,1);
-  ct[1]~poisson(exp(mu));
-  for (n in 2:N){
-    xt[n]~normal(mu + phi * (xt[n-1]-mu), sigma);
-    ct[n] ~ poisson(exp(xt[n]));
-  }
-}
-'
-
-burnin = 1000
-niter = 2000
-fit1 = stan(model_code=StanModel,data=data, warmup=burnin,iter=niter,chains=4,refresh=0)
-
-df=as.data.frame(summary(fit1,probs = c(0.025, 0.975))$summary)
-df=df[c(-1,-2,-3,-144),]
-df$mean=exp(df$mean)
-df$`2.5%`=exp(df$`2.5%`)
-df$`97.5%`=exp(df$`97.5%`)
-ggplot()+geom_line(aes(x=c(1:length(df$mean)),y=df$mean,colour="Posterior mean"))+geom_line(aes(x=c(1:length(df$`2.5%`)),y=df$`2.5%`,colour="Lower"))+geom_line(aes(x=c(1:length(df$`97.5%`)),y=df$`97.5%`,colour="Upper"))+geom_line(aes(x=c(1:length(data$ct)),y=data$ct,colour="Original data"))+xlab("Time")+ylab("Value")
-```
-
-In this case, $x_t$ should be seen as parameter.
-
-(d) Now, assume that we have a prior belief that the true underlying intensity $\theta_t$ varies more smoothly than the data suggests. Change the prior for $\sigma^2$ so that it becomes informative about that the AR(1)-process increments $\epsilon_t$ should be small. Re-estimate the model using Stan with the new prior and produce the same plot as in c). Has the posterior for $\theta_t$ changed?
 
 ```{r,q1=TRUE,echo=FALSE,message=FALSE, fig.align='center'}
 data=read.table("campy.dat",header = TRUE)
@@ -228,10 +187,53 @@ df$mean=exp(df$mean)
 df$`2.5%`=exp(df$`2.5%`)
 df$`97.5%`=exp(df$`97.5%`)
 ggplot()+geom_line(aes(x=c(1:length(df$mean)),y=df$mean,colour="Posterior mean"))+geom_line(aes(x=c(1:length(df$`2.5%`)),y=df$`2.5%`,colour="Lower"))+geom_line(aes(x=c(1:length(df$`97.5%`)),y=df$`97.5%`,colour="Upper"))+geom_line(aes(x=c(1:length(data$ct)),y=data$ct,colour="Original data"))+xlab("Time")+ylab("Value")
+```
+
+In this case, $x_t$ should be seen as parameter; the resulting value that we want to simulate is $c_t$, which is a variable depending on value of $x_t$.
+
+(d) Now, assume that we have a prior belief that the true underlying intensity $\theta_t$ varies more smoothly than the data suggests. Change the prior for $\sigma^2$ so that it becomes informative about that the AR(1)-process increments $\epsilon_t$ should be small. Re-estimate the model using Stan with the new prior and produce the same plot as in c). Has the posterior for $\theta_t$ changed?
+
+```{r,q1=TRUE,echo=FALSE,message=FALSE, fig.align='center'}
+data=read.table("campy.dat",header = TRUE)
+data = list(N=length(data$c), ct=data$c)
+StanModel ='
+data {
+  int<lower=0> N;
+  int ct[N];
+}
+parameters {
+  real mu;
+  real <lower=-1,upper=1>phi;
+  real<lower=0> sigma;
+  real xt[N];
+}
+model {
+  mu~ normal(1,100);
+  phi~ normal(1,100);
+  sigma ~ scaled_inv_chi_square(20,2);
+  xt[1]~normal(mu,1);
+  ct[1]~poisson(exp(mu));
+  for (n in 2:N){
+    xt[n]~normal(mu + phi * (xt[n-1]-mu), sigma);
+    ct[n] ~ poisson(exp(xt[n]));
+  }
+}
+'
+
+burnin = 1000
+niter = 2000
+fit1 = stan(model_code=StanModel,data=data, warmup=burnin,iter=niter,chains=4,refresh=0)
+
+df=as.data.frame(summary(fit1,probs = c(0.025, 0.975))$summary)
+df=df[c(-1,-2,-3,-144),]
+df$mean=exp(df$mean)
+df$`2.5%`=exp(df$`2.5%`)
+df$`97.5%`=exp(df$`97.5%`)
+ggplot()+geom_line(aes(x=c(1:length(df$mean)),y=df$mean,colour="Posterior mean"))+geom_line(aes(x=c(1:length(df$`2.5%`)),y=df$`2.5%`,colour="Lower"))+geom_line(aes(x=c(1:length(df$`97.5%`)),y=df$`97.5%`,colour="Upper"))+geom_line(aes(x=c(1:length(data$ct)),y=data$ct,colour="Original data"))+xlab("Time")+ylab("Value")
 
 ```
 
-Increased degrees of freedom in simulating sigmasq represents more informative prior for it. In this question we suppose nu = 20 on prior.Means of posterior thetas are more similar to actual data. 95% credible interval seems wider than before; but such credible interval covers almost all actual data points.
+Increased degrees of freedom in simulating sigmasq represents more informative prior for it. In this question we suppose nu = 20 on prior. Means of posterior thetas are more similar to actual data. 95% credible interval seems wider than before; but such credible interval covers almost all actual data points.
 
 \newpage
 
